RESOLVED FIXED87871
Web Inspector: [Chromium] Cannot bring Inspector to front when paused on breakpoint
https://bugs.webkit.org/show_bug.cgi?id=87871
Summary Web Inspector: [Chromium] Cannot bring Inspector to front when paused on brea...
Alexander Pavlov (apavlov)
Reported 2012-05-30 10:22:30 PDT
Chrome Version : 18.0.1025.168 OS Version: OS X 10.7.3 URLs (if applicable) : Other browsers tested: Add OK or FAIL after other browsers where you have tested this issue: Safari 5: Firefox 4.x: IE 7/8/9: What steps will reproduce the problem? 1. Start dev tools 2. Place a js-breakpoint somewhere 3. Execute the action needed to halt on the breakpoint 4. Select main chrome window with cmd+< (on a Swedish keyboard it is equivalent to Cmd+`) 5. Try to go to dev tools with cmd+< What is the expected result? dev tools should receive focus What happens instead? nothing, I'm stuck on the main window Please provide any additional information below. Attach a screenshot if possible. cmd+shift+i is also disabled. I have to go via the 'Window' menu which is very awkward. UserAgentString: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_3) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.168 Safari/535.19 Upstreaming http://code.google.com/p/chromium/issues/detail?id=126626
Attachments
Patch (1.83 KB, patch)
2012-05-30 10:33 PDT, Alexander Pavlov (apavlov)
no flags
Alexander Pavlov (apavlov)
Comment 1 2012-05-30 10:33:07 PDT
WebKit Review Bot
Comment 2 2012-05-31 04:28:56 PDT
Comment on attachment 144861 [details] Patch Clearing flags on attachment: 144861 Committed r119085: <http://trac.webkit.org/changeset/119085>
WebKit Review Bot
Comment 3 2012-05-31 04:29:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.